# Cpp17examples

./: README.md
filesystem/check_path/: CMakeLists.txt  main.cpp
filesystem/create_files/: CMakeLists.txt  main.cpp
filesystem/read_ftime/: CMakeLists.txt  main.cpp
filesystem/read_perms/: CMakeLists.txt  main.cpp
lang/aligned_new_cpp11/: CMakeLists.txt  main.cpp
lang/aligned_new_cpp17/: CMakeLists.txt  main.cpp
lang/aligned_new_wincomp/: CMakeLists.txt  main.cpp
lang/factory/: CMakeLists.txt  main.cpp
lang/hexfloat/: CMakeLists.txt  main.cpp
lang/inlinethreadlocal/: CMakeLists.txt  main.cpp
lang/lambdathis/: CMakeLists.txt  main.cpp
lang/nodehandle/: CMakeLists.txt  main.cpp
lang/nodemerge/: CMakeLists.txt  main.cpp
lang/nodemove/: CMakeLists.txt  main.cpp
lang/optional/: CMakeLists.txt  main.cpp
lang/optional_member/: CMakeLists.txt  main.cpp
lang/par_foreach/: CMakeLists.txt  main.cpp
lang/par_foreach_loop/: CMakeLists.txt  main.cpp
lang/par_reduce/: CMakeLists.txt  main.cpp
lang/par_reduce_float/: CMakeLists.txt  main.cpp
lang/par_reduce_lambda/: CMakeLists.txt  main.cpp
lang/par_transform_reduce/: CMakeLists.txt  main.cpp
lang/random_sample/: CMakeLists.txt  main.cpp
lang/random_sample_output/: CMakeLists.txt  main.cpp
lang/scan/: CMakeLists.txt  main.cpp
lang/variant_classes/: CMakeLists.txt  circle.hpp  coord.hpp  line.hpp  main.cpp  rectangle.hpp
pmr/track_new/: CMakeLists.txt  main.cpp  tracknew.cpp  tracknew.hpp
poly/variant/: CMakeLists.txt  circle.hpp  geoobj.hpp  line.hpp  main.cpp  polygon.hpp
(+82 files in other folders)
